--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,9 +1,9 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 <link rel="stylesheet" href="/css/main.css" />
 </head>
 
 <body>
-    <%- include('includes/nav.ejs') %>
+    <%- include('../includes/nav.ejs') %>
     <main>
         <% if (prods.length > 0) { %>
         <div class="grid">
@@ -17,14 +17,17 @@
                         alt="A Book" />
                 </div>
                 <div class="card__content">
-                    <h2 class="product__price">$19.99</h2>
+                    <h2 class="product__price"><%= product.price %></h2>
                     <p class="product__description">
-                        A very interesting book about so many even more interesting
-                        things!
+                        <%= product.description %>
                     </p>
                 </div>
                 <div class="card__actions">
-                    <button class="btn">Add to Cart</button>
+                    <a href="/admin/edit-product">Edit</a>
+                    <form action="/admin/delete-product" method='POST'>
+                    <button type='submit' class="btn">Delete</button>
+                </form>
+                 
                 </div>
             </article>
             <% } %>
@@ -33,4 +36,4 @@
         <h1>No Products Found!</h1>
         <% } %>
     </main>
-    <%- include('includes/end.ejs') %>
+    <%- include('../includes/end.ejs') %>
