--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -16,6 +16,10 @@
         <label for="price">price</label>
         <input step='0.01' type="number" name="price" id="price" />
       </div>
+      <div class='form-control'>
+        <label for="image">Image url</label>
+        <input type="text" name='image' id='image'>
+      </div>
       <div class="form-control">
         <label for="description">Description</label>
         <textarea name="description" rows='5' id="description"></textarea>
