--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -29,7 +29,7 @@
             <% } %>
         </div>
         <% } else { %>
-        <h1>empty shop</h1>
+        <h1>empty test</h1>
         <% } %>
     </main>
     <%- include('../includes/end.ejs') %>
