--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,6 +2,7 @@
 </head>
 
 <body>
-    <%- include('includes/nav.ejs') %>
+    <%- include('includes/navigation.ejs') %>
     <h1>Page Not Found!</h1>
-    <%- include('includes/end.ejs') %>
+
+<%- include('includes/end.ejs') %>
