--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -22,6 +22,10 @@
                 </div>
                 <div class="card__actions">
                     <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+
+                    <a href="/products/<%= product._id %>" class="btn">Details</a>
+
+
                 </div>
             </article>
             <% } %>
